[gd_scene load_steps=30 format=2]

[ext_resource path="res://screens/SpaceStoreScreen/SpaceStoreScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Roboto-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://screens/SpaceStoreScreen/ShopElement.tscn" type="PackedScene" id=3]
[ext_resource path="res://screens/SpaceStoreScreen/ShopItemData/ItemLaserDamage.tres" type="Resource" id=4]
[ext_resource path="res://screens/SpaceStoreScreen/ShopItemData/ItemMaxLife.tres" type="Resource" id=5]
[ext_resource path="res://screens/SpaceStoreScreen/ShopItemData/ItemMoveSpeed.tres" type="Resource" id=6]
[ext_resource path="res://screens/SpaceStoreScreen/level_data/TableEnergyReload.tres" type="Resource" id=7]
[ext_resource path="res://screens/SpaceStoreScreen/ShopItemData/ItemLaserEnergy.tres" type="Resource" id=8]
[ext_resource path="res://screens/SpaceStoreScreen/ShopItemData/ItemLaserReload.tres" type="Resource" id=9]
[ext_resource path="res://screens/SpaceStoreScreen/level_data/TableMaxLife.tres" type="Resource" id=10]
[ext_resource path="res://screens/SpaceStoreScreen/ShopItemData/ItemLife.tres" type="Resource" id=11]
[ext_resource path="res://screens/SpaceStoreScreen/level_data/TableEnergyCost.tres" type="Resource" id=12]
[ext_resource path="res://screens/SpaceStoreScreen/level_data/TableMoveSpeed.tres" type="Resource" id=13]
[ext_resource path="res://screens/SpaceStoreScreen/level_data/TableLaserDamage.tres" type="Resource" id=14]
[ext_resource path="res://assets/sprites/StoreItens/Icon_BuyMaxLife.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/StoreItens/Icon_BuyLife.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/StoreItens/Icon_BuyLaserReloadSpeed.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/StoreItens/Icon_BuyMoveSpeed.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/StoreItens/Icon_BuyLaserEnergyPerShoot.png" type="Texture" id=19]
[ext_resource path="res://assets/sprites/StoreItens/Icon_BuyLaserDamage.png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/HUD/player_white.png" type="Texture" id=21]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.878431, 0.878431, 0.878431, 1 )
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="DynamicFont" id=6]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.878431, 0.878431, 0.878431, 1 )
border_color = Color( 0.64728, 0.87, 0.3132, 1 )
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="ShaderMaterial" id=11]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.878431, 0.878431, 0.878431, 1 )
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxEmpty" id=10]

[node name="SpaceStoreScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.180392, 0.172549, 0.262745, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ShopBackground" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -560.0
margin_top = -290.0
margin_right = 560.0
margin_bottom = 310.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopSpace" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -340.0
margin_top = -250.0
margin_right = 340.0
margin_bottom = 250.0
custom_constants/vseparation = 35
custom_constants/hseparation = 40
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyLife" parent="ShopSpace" instance=ExtResource( 3 )]
item = ExtResource( 11 )
item_icon = ExtResource( 16 )

[node name="BuyMaxLife" parent="ShopSpace" instance=ExtResource( 3 )]
margin_left = 240.0
margin_right = 440.0
item = ExtResource( 5 )
data = ExtResource( 10 )
item_icon = ExtResource( 15 )

[node name="BuyMoveSpeed" parent="ShopSpace" instance=ExtResource( 3 )]
margin_left = 480.0
margin_right = 680.0
item = ExtResource( 6 )
data = ExtResource( 13 )
item_icon = ExtResource( 18 )

[node name="BuyLaserDamage" parent="ShopSpace" instance=ExtResource( 3 )]
margin_top = 275.0
margin_bottom = 515.0
item = ExtResource( 4 )
data = ExtResource( 14 )
item_icon = ExtResource( 20 )

[node name="BuyEnergySpeed" parent="ShopSpace" instance=ExtResource( 3 )]
margin_left = 240.0
margin_top = 275.0
margin_right = 440.0
margin_bottom = 515.0
item = ExtResource( 8 )
data = ExtResource( 12 )
item_icon = ExtResource( 19 )

[node name="BuyEnergyTime" parent="ShopSpace" instance=ExtResource( 3 )]
margin_left = 480.0
margin_top = 275.0
margin_right = 680.0
margin_bottom = 515.0
item = ExtResource( 9 )
data = ExtResource( 7 )
item_icon = ExtResource( 17 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -315.0
margin_right = 125.0
margin_bottom = -255.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0.180392, 0.172549, 0.262745, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "SPACE STORE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scores" type="Label" parent="."]
margin_left = 1080.0
margin_top = 20.0
margin_right = 1198.0
margin_bottom = 53.0
grow_horizontal = 0
custom_fonts/font = SubResource( 4 )
text = "Scores: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxLifeBar" type="TextureRect" parent="."]
modulate = Color( 0.745098, 0.745098, 0.745098, 1 )
material = SubResource( 11 )
margin_left = 80.0
margin_top = 20.0
margin_right = 296.0
margin_bottom = 92.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 21 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeBar" type="TextureRect" parent="."]
modulate = Color( 0.94902, 0.94902, 0.94902, 1 )
material = SubResource( 11 )
margin_left = 80.0
margin_top = 20.0
margin_right = 296.0
margin_bottom = 92.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 21 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitStore" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -85.0
margin_right = 80.0
margin_bottom = -25.0
custom_colors/font_color_focus = Color( 0.341176, 0.470588, 0.152941, 1 )
custom_colors/font_color = Color( 0.341176, 0.470588, 0.152941, 1 )
custom_colors/font_color_hover = Color( 0.180392, 0.172549, 0.262745, 1 )
custom_colors/font_color_pressed = Color( 0.341176, 0.470588, 0.152941, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 9 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[connection signal="pressed" from="ExitStore" to="." method="_on_ExitStore_pressed"]
